Fix login screen expanding further than screen width on iPhone

--- a/src/app-area/index/css/login.scss
+++ b/src/app-area/index/css/login.scss
@@ -8,6 +8,7 @@
 
     #login-form {
         visibility: hidden;
+        overflow: hidden;
     }
 
     #login-loading-screen {
